cppcheck-results.txt
[1mexample.c:6:6: [31merror:[39m Array 'ptr[10]' accessed at index 10, which is out of bounds. [arrayIndexOutOfBounds][0m
  ptr[10] = 5; // acceso fuera de los límites del array
     ^
[1mexample.c:7:28: [31merror:[39m Array 'ptr[10]' accessed at index 10, which is out of bounds. [arrayIndexOutOfBounds][0m
  printf("Valor: %d\n", ptr[10]);
                           ^
[1mexample.c:9:3: [31merror:[39m Memory leak: ptr [memleak][0m
  return 0;
  ^
[1mexample3.c:6:6: [31merror:[39m Array 'ptr[10]' accessed at index 10, which is out of bounds. [arrayIndexOutOfBounds][0m
  ptr[10] = 5;                         // acceso fuera de los límites del array
     ^
[1mexample3.c:7:28: [31merror:[39m Array 'ptr[10]' accessed at index 10, which is out of bounds. [arrayIndexOutOfBounds][0m
  printf("Valor: %d\n", ptr[10]);
                           ^
[1mexample3.c:9:3: [31merror:[39m Memory leak: ptr [memleak][0m
  return 0;
  ^
[1mexmple2.c:4:15: [31merror:[39m Expression '++a+a++' depends on order of evaluation of side effects [unknownEvaluationOrder][0m
  int b = ++a + a++;
              ^
